--- a/package.json
+++ b/package.json
@@ -13,21 +13,20 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
-    "core-js": "^3.18.3",
-    "nuxt": "^2.15.8"
+    "core-js": "^3.15.1",
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.15.8",
+    "@babel/eslint-parser": "^7.14.7",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/tailwindcss": "^4.2.1",
-    "autoprefixer": "^10.3.7",
-    "eslint": "^8.1.0",
+    "@nuxtjs/tailwindcss": "^4.2.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.20.0",
-    "postcss": "^8.3.11",
-    "prettier": "^2.4.1",
-    "tailwindcss": "^2.2.17"
+    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-vue": "^7.12.1",
+    "postcss": "^8.3.5",
+    "prettier": "^2.3.2"
   }
 }
