Fix docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,10 +6,10 @@ services:
     container_name: top-contrib
     restart: unless-stopped
     environment:
-      API_BASE_URL: top-contrib://top-contrib:8080 #url for backend
+      API_BASE_URL: http://top-contrib:8080 #url for backend
       PORT: 3000
     networks:
-      - topContrib-app-network
+      - contributions-network
     ports:
       - "3000:3000"
   
@@ -21,7 +21,7 @@ services:
 #       DB_URL: mongodb://mongodb:27017
 #       PORT: 8080
 #     networks:
-#       - topContrib-app-network
+#       - contributions-network
 #     ports:
 #       - "8080:8080"
   
@@ -32,10 +32,10 @@ services:
 #     environment:
 #       MONGO_INITDB_DATABASE: top-contributors
 #     networks:
-#       - topContrib-app-network
+#       - contributions-network
 #     ports:
 #       - "27017:27017"
 
 networks:
-  topContrib-app-network:
+  contributions-network:
     driver: bridge
