--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "nuxt-healthcheck": "^1.0.1",
     "vue-lazy-hydration": "^2.0.0-beta.4"
   },
   "devDependencies": {
