--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "apexcharts": "^3.32.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "nuxt-healthcheck": "^1.0.1",
+    "vue-apexcharts": "^1.6.2",
     "vue-lazy-hydration": "^2.0.0-beta.4"
   },
   "devDependencies": {
