update Drone pipeline template

--- a/.drone.yml
+++ b/.drone.yml
@@ -5,16 +5,16 @@ type: kubernetes
 name: default
 
 metadata:
-  namespace: josa-builds
+  namespace: builds
 
 node_selector:
   doks.digitalocean.com/node-pool: josa-cloud-np
 
 steps:
-  - name: build and release contributions-web
+  - name: build
     image: plugins/docker
     settings:
-      repo: josaorg/contributions-web
+      repo: josaorg/community-web
       tags:
         - ${DRONE_COMMIT_SHA}
         - latest
@@ -22,12 +22,11 @@ steps:
         from_secret: docker_username
       password:
         from_secret: docker_password
-      auto_tag: false
-  - name: notify on Slack
+  - name: notify
     image: plugins/slack
     settings:
       webhook:
         from_secret: slack_webhook
       channel: heartbeat
     depends_on:
-      - build and release contributions-web
+      - build
