--- a/.dockerignore
+++ b/.dockerignore
@@ -11,18 +11,21 @@ docker-compose.yml
 .dockerignore
 
 # Documentation
-README.md
-CHANGELOG.md
-CONTRIBUTING.md
-CODE_OF_CONDUCT.md
-SECURITY.md
+*.md
+LICENSE
 
 # macOS (optional)
 .DS_Store
 
 # Visual Studio Code (optional)
 .vscode
-.editorconfig
 
 # Drone
 .drone.yml
+
+.env
+.env.*
+
+# editot configs
+.eslintrc.*
+.prettierrc
