--- a/.drone.yml
+++ b/.drone.yml
@@ -17,7 +17,7 @@ steps:
       repo: josaorg/contributions-web
       tags:
         - ${DRONE_COMMIT_SHA}
-        - latest
+        - stable
       username:
         from_secret: docker_username
       password:
