--- a/.drone.yml
+++ b/.drone.yml
@@ -1,32 +1,8 @@
 # Drone CI File!
 
-kind: pipeline
-type: kubernetes
-name: default
+kind: template
+load: base.jsonnet
 
-metadata:
-  namespace: builds
-
-node_selector:
-  doks.digitalocean.com/node-pool: josa-cloud-np
-
-steps:
-  - name: build
-    image: plugins/docker
-    settings:
-      repo: josaorg/contributions-web
-      tags:
-        - ${DRONE_COMMIT_SHA}
-        - stable
-      username:
-        from_secret: docker_username
-      password:
-        from_secret: docker_password
-  - name: notify
-    image: plugins/slack
-    settings:
-      webhook:
-        from_secret: slack_webhook
-      channel: heartbeat
-    depends_on:
-      - build
+data:
+  repositoryName: josaorg/contributions-web
+  releaseName: contributions-web
