--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.8",
     "nuxt-healthcheck": "^1.0.1",
+    "nuxt-matomo": "^1.2.4",
     "vue-apexcharts": "^1.6.2",
     "vue-lazy-hydration": "^2.0.0-beta.4"
   },
