build: add build args for the build banner

--- a/.drone.yml
+++ b/.drone.yml
@@ -19,6 +19,16 @@ steps:
         [
           CONTRIBUTIONS_API_URL=https://contributions.api.dev.josa.ngo,
           MATOMO_SITE_ID=11,
+          TARGET_ENV=development
+        ]
+      build_args_from_env:
+        [
+          DRONE_BUILD_NUMBER,
+          DRONE_BUILD_LINK,
+          DRONE_COMMIT_SHA,
+          DRONE_COMMIT_LINK,
+          DRONE_REPO_LINK,
+          DRONE_BUILD_FINISHED,
         ]
       tags:
         - ${DRONE_COMMIT_SHA}
