--- a/package.json
+++ b/package.json
@@ -22,20 +22,23 @@
     "nuxt": "^2.15.8",
     "nuxt-healthcheck": "^1.0.1",
     "nuxt-matomo": "^1.2.4",
+    "ufo": "^1.0.1",
     "vue-apexcharts": "^1.6.2",
     "vue-lazy-hydration": "^2.0.0-beta.4"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/eslint-config": "^12.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
-    "@nuxtjs/tailwindcss": "^5.3.2",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.8.0",
     "postcss": "^8.4.19",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "tailwindcss": "^3.2.4"
   }
 }
