--- a/.drone.yml
+++ b/.drone.yml
@@ -32,7 +32,7 @@ steps:
         ]
       tags:
         - ${DRONE_COMMIT_SHA}
-        - stable
+        - latest
       username:
         from_secret: docker_username
       password:
