--- a/.woodpecker/build-stable-image.yaml
+++ b/.woodpecker/build-stable-image.yaml
@@ -20,8 +20,8 @@ variables:
     - CI_REPO_LINK=${CI_REPO_LINK}
     - CI_BUILD_FINISHED=${CI_BUILD_FINISHED}
     - CONTRIBUTIONS_API_URL=https://contributions.api.dev.josa.ngo
-    - MATOMO_SITE_ID=11
-    - TARGET_ENV=development
+    - MATOMO_SITE_ID=10
+    - TARGET_ENV=production
   # Success message template
   - &success_message >
     ✅ *SUCCESS* - Stable Build #{{ build.number }}
