--- a/.woodpecker/build-latest-image.yaml
+++ b/.woodpecker/build-latest-image.yaml
@@ -24,6 +24,9 @@ variables:
     - CI_COMMIT_LINK=${CI_COMMIT_LINK}
     - CI_REPO_LINK=${CI_REPO_LINK}
     - CI_BUILD_FINISHED=${CI_BUILD_FINISHED}
+    - CONTRIBUTIONS_API_URL=http://contributions.api.svc.cluster.local:8080
+    - MATOMO_SITE_ID=11
+    - TARGET_ENV=production
   # Success message template
   - &success_message >
     ✅ *SUCCESS* - Latest Build #{{ build.number }}
