--- a/.woodpecker/build-stable-image.yaml
+++ b/.woodpecker/build-stable-image.yaml
@@ -19,6 +19,9 @@ variables:
     - CI_COMMIT_LINK=${CI_COMMIT_LINK}
     - CI_REPO_LINK=${CI_REPO_LINK}
     - CI_BUILD_FINISHED=${CI_BUILD_FINISHED}
+    - CONTRIBUTIONS_API_URL=http://contributions.api.svc.cluster.local:8080
+    - MATOMO_SITE_ID=10
+    - TARGET_ENV=production
   # Success message template
   - &success_message >
     ✅ *SUCCESS* - Stable Build #{{ build.number }}
