--- a/.woodpecker/build-stable-image.yaml
+++ b/.woodpecker/build-stable-image.yaml
@@ -19,9 +19,6 @@ variables:
     CI_COMMIT_LINK: ${CI_COMMIT_LINK}
     CI_REPO_LINK: ${CI_REPO_LINK}
     CI_BUILD_FINISHED: ${CI_BUILD_FINISHED}
-    CONTRIBUTIONS_API_URL: http://contributions.api.svc.cluster.local:8080
-    MATOMO_SITE_ID: '11'
-    TARGET_ENV: production
   # Success message template
   - &success_message >
     ✅ *SUCCESS* - Stable Build #{{ build.number }}
@@ -65,7 +62,12 @@ steps:
         from_secret: DOCKER_HUB_USERNAME
       password:
         from_secret: DOCKER_HUB_PASSWORD
-      build_args: *build_args_template
+      build_args:
+        {
+          CONTRIBUTIONS_API_URL: http://contributions.api.svc.cluster.local:8080,
+          MATOMO_SITE_ID: '11',
+          TARGET_ENV: production,
+        }
     depends_on:
       - check-for-leaks
 
