--- a/.woodpecker/build-latest-image.yaml
+++ b/.woodpecker/build-latest-image.yaml
@@ -14,8 +14,8 @@ when:
     branch: [development]
 
 variables:
-  - &docker_repo 'josaorg/contributions-web'
-  - &slack_channel 'builds'
+  - &docker_repo "josaorg/contributions-web"
+  - &slack_channel "builds"
   # Docker build arguments template
   - &build_args_template
     CI_COMMIT_SHA: ${CI_COMMIT_SHA}
@@ -24,8 +24,8 @@ variables:
     CI_COMMIT_LINK: ${CI_COMMIT_LINK}
     CI_REPO_LINK: ${CI_REPO_LINK}
     CI_BUILD_FINISHED: ${CI_BUILD_FINISHED}
-    CONTRIBUTIONS_API_URL: http://contributions.api.svc.cluster.local:8080
-    MATOMO_SITE_ID: '11'
+    CONTRIBUTIONS_API_URL: http://contributions.api.svc.cluster.local:80
+    MATOMO_SITE_ID: "11"
     TARGET_ENV: production
   # Success message template
   - &success_message >
@@ -72,8 +72,8 @@ steps:
         from_secret: DOCKER_HUB_PASSWORD
       build_args:
         {
-          CONTRIBUTIONS_API_URL: http://contributions.api.svc.cluster.local:8080,
-          MATOMO_SITE_ID: '11',
+          CONTRIBUTIONS_API_URL: http://contributions.api.svc.cluster.local:80,
+          MATOMO_SITE_ID: "11",
           TARGET_ENV: production,
         }
     depends_on:
