--- a/.woodpecker/build-stable-image.yaml
+++ b/.woodpecker/build-stable-image.yaml
@@ -11,14 +11,7 @@ when:
 variables:
   - &docker_repo "josaorg/contributions-web"
   - &slack_channel "builds"
-  # Docker build arguments template
-  - &build_args_template
-    CI_COMMIT_SHA: ${CI_COMMIT_SHA}
-    CI_BUILD_NUMBER: ${CI_BUILD_NUMBER}
-    CI_BUILD_LINK: ${CI_BUILD_LINK}
-    CI_COMMIT_LINK: ${CI_COMMIT_LINK}
-    CI_REPO_LINK: ${CI_REPO_LINK}
-    CI_BUILD_FINISHED: ${CI_BUILD_FINISHED}
+
   # Success message template
   - &success_message >
     ✅ *SUCCESS* - Stable Build #{{ build.number }}
@@ -43,16 +36,18 @@ variables:
     • <{{ build.link }}|View Build>
 
 steps:
-  # Security check - scan for secrets/credentials
-  - name: check-for-leaks
-    image: zricethezav/gitleaks:v8.18.4
-    commands:
-      - gitleaks detect --source . --verbose
+  - name: run-pre-commit-hooks
+    image: josaorg/pre-commit-runner
+    settings:
+      args: "--all-files"
+      skip: "end-of-file-fixer, yamllint"
 
   # Build stable image (main branch only)
   - name: build-stable-image
     image: woodpeckerci/plugin-docker-buildx
     settings:
+      buildkit_debug: true
+      dry-run: true
       repo: *docker_repo
       dockerfile: ./Dockerfile
       tags:
@@ -63,13 +58,19 @@ steps:
       password:
         from_secret: DOCKER_HUB_PASSWORD
       build_args:
-        {
-          CONTRIBUTIONS_API_URL: http://contributions.api.svc.cluster.local:80,
-          MATOMO_SITE_ID: "11",
-          TARGET_ENV: production,
-        }
+        CI_REPO: "${CI_REPO}"
+        CI_REPO_NAME: "${CI_REPO_NAME}"
+        CI_REPO_URL: "${CI_REPO_URL}"
+        CI_COMMIT_SHA: "${CI_COMMIT_SHA}"
+        CI_COMMIT_REF: "${CI_COMMIT_REF}"
+        CI_PIPELINE_URL: "${CI_PIPELINE_URL}"
+        CI_PIPELINE_CREATED: "${CI_PIPELINE_CREATED}"
+        CI_PREV_PIPELINE_URL: "${CI_PREV_PIPELINE_URL}"
+        CONTRIBUTIONS_API_URL: http://contributions.api.svc.cluster.local:80
+        MATOMO_SITE_ID: "11"
+        TARGET_ENV: production
     depends_on:
-      - check-for-leaks
+      - run-pre-commit-hooks
 
   # Slack notification for stable build success
   - name: notify-slack-stable-success
@@ -82,7 +83,7 @@ steps:
     when:
       - status: success
     depends_on:
-      - check-for-leaks
+      - run-pre-commit-hooks
       - build-stable-image
 
   # Slack notification for stable build failure
@@ -96,5 +97,5 @@ steps:
     when:
       - status: failure
     depends_on:
-      - check-for-leaks
+      - run-pre-commit-hooks
       - build-stable-image
