--- a/.woodpecker/build-stable-image.yaml
+++ b/.woodpecker/build-stable-image.yaml
@@ -46,8 +46,6 @@ steps:
   - name: build-stable-image
     image: woodpeckerci/plugin-docker-buildx
     settings:
-      buildkit_debug: true
-      dry-run: true
       repo: *docker_repo
       dockerfile: ./Dockerfile
       tags:
@@ -66,6 +64,7 @@ steps:
         CI_PIPELINE_URL: "${CI_PIPELINE_URL}"
         CI_PIPELINE_CREATED: "${CI_PIPELINE_CREATED}"
         CI_PREV_PIPELINE_URL: "${CI_PREV_PIPELINE_URL}"
+        CI_PIPELINE_NUMBER: "${CI_PIPELINE_NUMBER}"
         CONTRIBUTIONS_API_URL: http://contributions.api.svc.cluster.local:80
         MATOMO_SITE_ID: "11"
         TARGET_ENV: production
