Update registry endpoint (#131)
* build: update registry endpoint

* ci: update docker repo url

* ci: fix docker repo url

--- a/.woodpecker/build-latest-image.yaml
+++ b/.woodpecker/build-latest-image.yaml
@@ -7,7 +7,8 @@ when:
     evaluate: 'CI_COMMIT_TARGET_BRANCH != "main"'
 
 variables:
-  - &docker_repo "josaorg/contributions-web"
+  - &registry_url "https://registry.cloud.josa.ngo"
+  - &docker_repo "registry.cloud.josa.ngo/library/contributions-web"
   - &slack_channel "builds"
   # Success message template
   - &success_message >
@@ -45,14 +46,15 @@ steps:
     image: woodpeckerci/plugin-docker-buildx
     settings:
       repo: *docker_repo
+      registry: *registry_url
       dockerfile: ./Dockerfile
       tags:
         - ${CI_COMMIT_SHA:-latest}
         - latest
       username:
-        from_secret: DOCKER_HUB_USERNAME
+        from_secret: REGISTRY_USERNAME
       password:
-        from_secret: DOCKER_HUB_PASSWORD
+        from_secret: REGISTRY_SECRET
       build_args:
         CI_REPO: "${CI_REPO}"
         CI_REPO_NAME: "${CI_REPO_NAME}"
