--- a/.woodpecker/build-stable-image.yaml
+++ b/.woodpecker/build-stable-image.yaml
@@ -9,7 +9,8 @@ when:
       exclude: [main]
 
 variables:
-  - &docker_repo "josaorg/contributions-web"
+  - &registry_url "https://registry.cloud.josa.ngo"
+  - &docker_repo "registry.cloud.josa.ngo/library/contributions-web"
   - &slack_channel "builds"
   # Success message template
   - &success_message >
@@ -46,14 +47,15 @@ steps:
     image: woodpeckerci/plugin-docker-buildx
     settings:
       repo: *docker_repo
+      registry: *registry_url
       dockerfile: ./Dockerfile
       tags:
         - ${CI_COMMIT_SHA:-latest}
         - stable
       username:
-        from_secret: DOCKER_HUB_USERNAME
+        from_secret: REGISTRY_USERNAME
       password:
-        from_secret: DOCKER_HUB_PASSWORD
+        from_secret: REGISTRY_SECRET
       build_args:
         CI_REPO: "${CI_REPO}"
         CI_REPO_NAME: "${CI_REPO_NAME}"
