build: reduce dependency versions to major only

--- a/package.json
+++ b/package.json
@@ -13,29 +13,30 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
-    "@josango/nuxt-build-banner": "^1.0.2",
-    "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/proxy": "^2.1.0",
-    "@nuxtjs/pwa": "^3.3.5",
-    "apexcharts": "^5.3.6",
-    "core-js": "^3.47.0",
-    "nuxt": "^2.18.1",
-    "nuxt-healthcheck": "^1.0.1",
-    "nuxt-matomo": "^1.2.4",
-    "vue-apexcharts": "^1.7.0",
+    "@josango/nuxt-build-banner": "^1",
+    "@nuxtjs/axios": "^5",
+    "@nuxtjs/proxy": "^2",
+    "@nuxtjs/pwa": "^3",
+    "apexcharts": "^5",
+    "core-js": "^3",
+    "nuxt": "^2",
+    "nuxt-healthcheck": "^1",
+    "nuxt-matomo": "^1",
+    "vue-apexcharts": "^1",
     "vue-lazy-hydration": "^2.0.0-beta.4"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.22.15",
-    "@nuxtjs/eslint-config": "^11.0.0",
-    "@nuxtjs/eslint-module": "^3.1.0",
-    "@nuxtjs/tailwindcss": "^5.3.5",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.2",
-    "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-promise": "^6.6.0",
-    "eslint-plugin-vue": "^9.33.0",
-    "postcss": "^8.5.6",
-    "prettier": "^3.7.4"
+    "@babel/eslint-parser": "^7",
+    "@nuxtjs/eslint-config": "^11",
+    "@nuxtjs/eslint-module": "^3",
+    "@nuxtjs/tailwindcss": "^4",
+    "eslint": "^8",
+    "eslint-config-prettier": "^9",
+    "eslint-plugin-nuxt": "^4",
+    "eslint-plugin-promise": "^6",
+    "eslint-plugin-vue": "^9",
+    "postcss": "^8",
+    "prettier": "^3",
+    "tailwindcss": "^3"
   }
 }
